--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+{% block head %}
 <head>
   <!-- <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -11,11 +12,14 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="csrf-token" content="{{ csrf_token }}">
+
   <title>
     {% block page_title %}
     {% endblock %}
   </title>
 </head>
+{% endblock %}
 <body class="d-flex flex-column min-vh-100 pt-4 bg-dark" >
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" > 
